--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap');
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
