--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -27,7 +27,7 @@ body {
 .reveal h5,
 .reveal h6 {
   color: #2a54a9;
-  font-family: "Cabin Sketch", sans-serif; }
+  font-family: "Cabin Sketch", cursive, sans-serif; }
 
 /*********************************************
  * OTHER
