--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin+Sketch:wght@400;700&family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata:wght@400;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css?family=Cabin+Sketch:wght@400;700&family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata:wght@400;700&display=swap');*/
 
 /*********************************************
  * GLOBAL STYLES
