--- a/layouts/slides/baseof.html
+++ b/layouts/slides/baseof.html
@@ -39,6 +39,8 @@
   </script>
 	
 	<meta name="format-detection" content="telephone=no">
+	
+	<link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
