--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -443,4 +443,20 @@ margin-right: 8px; }
 p.kudos {
 	font-size: 0.8rem;
 	color: #555555; 
-	text-align: center; }	
+	text-align: center; }
+	
+blockquote.twitter-tweet {
+  display: inline-block;
+  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 16px;
+  border-color: #eee #ddd #bbb;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  margin: 10px 5px;
+  padding: 0 16px 16px 16px;
+  max-width: 468px;
+}		
