--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -446,8 +446,7 @@ p.kudos {
 	text-align: center; }
 	
 blockquote.twitter-tweet {
-  display: inline-block;
-  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-family: "EB Garamond", serif;
   font-size: 12px;
   font-weight: bold;
   line-height: 16px;
