--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -446,16 +446,5 @@ p.kudos {
 	text-align: center; }
 	
 blockquote.twitter-tweet {
-  font-family: "EB Garamond", serif;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 16px;
-  border-color: #eee #ddd #bbb;
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-  margin: 10px 5px;
-  padding: 0 16px 16px 16px;
-  max-width: 468px;
+  font-family: "Cabin Sketch", sans-serif;
 }		
