--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -445,6 +445,6 @@ p.kudos {
 	color: #555555; 
 	text-align: center; }
 	
-blockquote.twitter-tweet {
-  font-family: "Cabin Sketch", sans-serif;
-}		
+#twitterFeed * {
+font-family: "EB Garamond" !important;
+}
