--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -8,35 +8,35 @@
     top: 0;
     width: 100%;
     height: 30px; }
-    @media (max-width: 840px) {
+/*    @media (max-width: 840px) {
       .line.top {
-        height: 15px; } }
+        height: 15px; } }*/
   .line.bottom {
     left: 0;
     top: auto;
     bottom: 0;
     width: 100%;
     height: 30px; }
-    @media (max-width: 840px) {
+/*    @media (max-width: 840px) {
       .line.bottom {
-        height: 15px; } }
+        height: 15px; } }*/
   .line.left {
     left: 0;
     top: 0;
     width: 30px;
     height: 200%; }
-    @media (max-width: 840px) {
+/*    @media (max-width: 840px) {
       .line.left {
-        width: 15px; } }
+        width: 15px; } }*/
   .line.right {
     left: auto;
     right: 0;
     top: 0;
     width: 30px;
     height: 200%; }
-    @media (max-width: 840px) {
+/*    @media (max-width: 840px) {
       .line.right {
-        width: 15px; } }
+        width: 15px; } }*/
 
 .reveal.has-dark-background .line {
   display: none; }
