--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -96,3 +96,8 @@ box-shadow: none; }
  *********************************************/
 .reveal .progress {
   color: #2a54a9; }
+  
+.reval i {
+	font-family: 'FontAwesome';
+    font-style: normal;
+}  
