--- a/layouts/slides/baseof.html
+++ b/layouts/slides/baseof.html
@@ -41,6 +41,8 @@
 	<meta name="format-detection" content="telephone=no">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+	
+	<script src="https://kit.fontawesome.com/18aaf16e8a.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
