--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -45,9 +45,30 @@
   </span>
   {{ end }}
     
-  <!-- {{/* Show kudos count. */}}
+  {{/* Show kudos count. */}}
   <span class="middot-divider"></span>
-  0 kudos -->
+  <script>
+     var settings = {
+       "url": "https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter=/blog/2020/05/19/posters-del-sistema-solar/",
+	   "method": "GET",
+	   "timeout": 0,
+	   "headers": {
+		   "Cookie": "__cfduid=d8fc1b82878312f7b59b962bc028322221590490364",
+		   // "Access-Control-Allow-Origin": "https://rodrigoalcarazdelaosa.me",
+		   // "Vary": "Origin"
+	     },
+	   "dataType" : "json",
+     }
+
+     $.ajax(settings).done(function (data) {
+       console.log(data);
+
+       var content = data.response.items[0].likes;
+       $("#likes").append(content);
+
+     });
+  </script>
+    <span id="likes"></span><span> kudos</span>
 
   {{/* Show Disqus comment count if enabled. */}}
   {{ $disqus_enabled := eq site.Params.comments.engine 1 | and (index site.Params.comments.commentable $page.Type) | and (ne $page.Params.commentable false) | or $page.Params.commentable }}
