page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -49,7 +49,7 @@
   <span class="middot-divider"></span>
   <script>
      var settings = {
-       "url": "https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter=/blog/2020/05/19/posters-del-sistema-solar/",
+       "url": "https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter=$page.RelPermalink",
 	   "method": "GET",
 	   "timeout": 0,
 	   "headers": {
