--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -51,7 +51,7 @@
      var pathname = window.location.pathname;
 	 console.log(pathname);
      var settings = {
-       "url": "https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter=pathname",
+       "url": "https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter="+pathname,
 	   "method": "GET",
 	   "timeout": 0,
 	   "headers": {
