--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -70,7 +70,7 @@
 
      });
   </script>
-  <span id="kudos"></span><span> kudos</span>
+  <span id="kudos"></span><span>&nbsp;kudos</span>
 
   {{/* Show Disqus comment count if enabled. */}}
   {{ $disqus_enabled := eq site.Params.comments.engine 1 | and (index site.Params.comments.commentable $page.Type) | and (ne $page.Params.commentable false) | or $page.Params.commentable }}
