--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,10 +1,6 @@
 <meta name="format-detection" content="telephone=no">
 
-<script type="text/javascript" src="//coronabnr-53eb.kxcdn.com/coronabar.min.js" async></script>
-
-<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="//coronabnr-53eb.kxcdn.com/coronabar.min.js" async></script>
 
 <script type="text/javascript">
     var CoronaBarOptions = {
@@ -24,9 +20,13 @@
         "textStepFourDesc": "Evita las multitudes", // string
         "textStepFiveDesc": "Quédate dentro" // string
     };
-</script>
+</script> -->
 
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
@@ -51,4 +51,4 @@
 
         chart.draw(data, options);
       }
-    </script>
+    </script> -->
