page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -53,6 +53,14 @@
        "url": "https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter="+pathname,
 	   "method": "GET",
 	   "timeout": 0,
+	   "xhrFields": {
+	       // The 'xhrFields' property sets additional fields on the XMLHttpRequest.
+	       // This can be used to set the 'withCredentials' property.
+	       // Set the value to 'true' if you'd like to pass cookies to the server.
+	       // If this is enabled, your server must respond with the header
+	       // 'Access-Control-Allow-Credentials: true'.
+	       "withCredentials": "true"
+	     },
 	   "headers": {
 		   "Cookie": "__cfduid=d8fc1b82878312f7b59b962bc028322221590490364",
 		   "Access-Control-Allow-Origin": "http://localhost:1313",
