page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -66,6 +66,7 @@
 		   "Access-Control-Allow-Origin": "http://localhost:1313",
 		   "Vary": "Origin"
 	     },
+  	   "contentType":"application/json",
 	   "dataType" : "json",
      }
 
