--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -63,7 +63,7 @@
 	     },
 	   "headers": {
 		   "Cookie": "__cfduid=d8fc1b82878312f7b59b962bc028322221590490364",
-		   "Access-Control-Allow-Origin": "http://localhost:1313",
+		   "Access-Control-Allow-Origin": "*",
 		   "Vary": "Origin"
 	     },
   	   "contentType":"application/json",
