page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -63,7 +63,8 @@
 	     },
 	   "headers": {
 		   "Cookie": "__cfduid=d8fc1b82878312f7b59b962bc028322221590490364",
-		   "Access-Control-Allow-Origin": "*"
+		   "Access-Control-Allow-Origin": "*",
+		   "Accept": "application/json"
 		   // "Vary": "Origin"
 	     },
   	   "contentType":"application/json",
