page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -72,7 +72,7 @@
      }
 	 
 	 $.ajax({
-	             headers: { "Accept": "application/json", "Origin": "http://localhost"},
+	             headers: { "Accept": "application/json", "Access-Control-Allow-Origin": "*",},
 	             type: 'GET',
 	             url: 'https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter='+pathname,
 	             crossDomain: true,
