--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -75,6 +75,8 @@
 	             headers: { "Accept": "application/json", "Access-Control-Allow-Origin": "*",},
 	             type: 'GET',
 	             url: 'https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter='+pathname,
+				 "contentType":"application/json",
+				 "dataType" : "json",
 	             crossDomain: true,
 	             beforeSend: function(xhr){
 	                 xhr.withCredentials = true;
