--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -66,6 +66,7 @@
        console.log(data);
 
        var content = data.response.items[0].likes;
+	   console.log(content);
        $("#kudos").append(content);
 
      });
