--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -67,11 +67,15 @@
 
        var content = data.response.items[0].likes;
 	   console.log(content);
-       $("#kudos").append(content);
+	   if (content = 1) {
+	   		$("#kudos").append(content+" kudo");
+   	   else {
+ 		    $("#kudos").append(content+" kudos");
+	   }
 
      });
   </script>
-  <span id="kudos"></span><span>&nbsp;kudos</span>
+  <span id="kudos"></span>
 
   {{/* Show Disqus comment count if enabled. */}}
   {{ $disqus_enabled := eq site.Params.comments.engine 1 | and (index site.Params.comments.commentable $page.Type) | and (ne $page.Params.commentable false) | or $page.Params.commentable }}
