page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -69,7 +69,7 @@
 	   console.log(content);
 	   if (content = 1) {
 	   		$("#kudos").append(content+" kudo");
-   	   else {
+   	   } else {
  		    $("#kudos").append(content+" kudos");
 	   }
 
