--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -65,7 +65,7 @@
      $.ajax(settings).done(function (data) {
        console.log(data);
 	   
-	   if (data.response.items[0] = null) {
+	   if (data.response.items[0] == null) {
 		   $("#kudos").append("0 kudos");
 	   } else {
 	       var content = data.response.items[0].likes;
