page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -71,7 +71,7 @@
 	       var content = data.response.items[0].likes;
 		   console.log(content);
 	   }
-	   if (content = "1") {
+	   if (content == "1") {
 	   		$("#kudos").append(content+" kudo");
    	   } else {
  		    $("#kudos").append(content+" kudos");
