--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -54,8 +54,10 @@
        "url": "https://api.likebtn.com/api/?action=stat&email=rodri.alcaraz@gmail.com&api_key=ec2425ad8152ffce766f209a861c136a&site_id=5ec928f16fd08b5b023a4f3e&output=json&identifier_filter="+pathname,
 	   "method": "GET",
 	   "timeout": 0,
-	   "headers": {
-		   "Cookie": "__cfduid=d8fc1b82878312f7b59b962bc028322221590490364",
+	   "xhrFields": {
+	       "withCredentials": "true"
+	   }
+	   "headers": {		   
 		   // "Access-Control-Allow-Origin": "https://rodrigoalcarazdelaosa.me",
 		   // "Vary": "Origin"
 	     },
