--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -58,13 +58,13 @@
      }
 
      $.ajax(settings).done(function (data) {
-       console.log(data);
+       // console.log(data);
 	   
 	   if (data.response.items[0] == null) {
 		   $("#kudos").append("0 kudos");
 	   } else {
 	       var content = data.response.items[0].likes;
-		   console.log(content);	   
+		   // console.log(content);	   
 		   if (content == "1") {
 		   		$("#kudos").append(content+" kudo");
 	   	   } else {
