--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -61,19 +61,15 @@
        // console.log(data);
 	   
 	   if (data.response.items[0] == null) {
-		   $("#kudos").append("0 kudos");
+		   $("#kudos").append("0");
 	   } else {
 	       var content = data.response.items[0].likes;
 		   // console.log(content);	   
-		   if (content == "1") {
-		   		$("#kudos").append(content+" kudo");
-	   	   } else {
-	 		    $("#kudos").append(content+" kudos");
-		   }
+		   $("#kudos").append(content+" kudos");		   
 	   }
      });
   </script>
-  <span id="kudos"></span>
+  <span id="kudos"></span><i class="fas fa-heart"></i>
 
   {{/* Show Disqus comment count if enabled. */}}
   {{ $disqus_enabled := eq site.Params.comments.engine 1 | and (index site.Params.comments.commentable $page.Type) | and (ne $page.Params.commentable false) | or $page.Params.commentable }}
