page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -65,7 +65,7 @@
 	   } else {
 	       var content = data.response.items[0].likes;
 		   // console.log(content);	   
-		   $("#kudos").append(content+" kudos");		   
+		   $("#kudos").append(content);
 	   }
      });
   </script>
