--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -69,7 +69,7 @@
 	   }
      });
   </script>
-  <span id="kudos"></span><i class="fas fa-heart">&nbsp;</i>
+  <span id="kudos">&nbsp;</span><i class="fas fa-heart"></i>
 
   {{/* Show Disqus comment count if enabled. */}}
   {{ $disqus_enabled := eq site.Params.comments.engine 1 | and (index site.Params.comments.commentable $page.Type) | and (ne $page.Params.commentable false) | or $page.Params.commentable }}
