--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -2,7 +2,7 @@
 <div class="share-box" aria-hidden="true">	
   <ul class="share">
 	<!-- LikeBtn.com BEGIN -->
-	<span class="likebtn-wrapper" data-theme="custom" data-share_enabled="false" data-f_size="30" data-icon_size="30" data-icon_l="hrt1" data-icon_l_c="#111111" data-icon_l_c_v="#b50000" data-label_c="#1965b0" data-label_c_v="#b50000" data-counter_l_c="#111111" data-bg_c="#fffff8" data-bg_c_v="#fffff8" data-brdr_c="#fffff8" data-f_family="Courier New" data-lang="es" data-i18n_like="Kudos" data-ef_voting="heartbeat" data-show_like_label="false" data-dislike_enabled="false" data-popup_style="dark" data-i18n_like_tooltip="Dar kudos" data-i18n_unlike_tooltip="Quitar kudos" data-i18n_popup_text="¡Gracias por tus kudos!"></span>
+	<span class="likebtn-wrapper" data-site_id="5ec928f16fd08b5b023a4f3e" data-theme="custom" data-share_enabled="false" data-f_size="30" data-icon_size="30" data-icon_l="hrt1" data-icon_l_c="#111111" data-icon_l_c_v="#b50000" data-label_c="#1965b0" data-label_c_v="#b50000" data-counter_l_c="#111111" data-bg_c="#fffff8" data-bg_c_v="#fffff8" data-brdr_c="#fffff8" data-f_family="Courier New" data-lang="es" data-i18n_like="Kudos" data-ef_voting="heartbeat" data-show_like_label="false" data-dislike_enabled="false" data-popup_style="dark" data-i18n_like_tooltip="Dar kudos" data-i18n_unlike_tooltip="Quitar kudos" data-i18n_popup_text="¡Gracias por tus kudos!"></span>
 	<!-- LikeBtn.com END -->
     {{ range where site.Data.page_sharer.buttons "enable" true }}
       {{ $pack := or .icon_pack "fas" }}
