page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -60,6 +60,7 @@
 	   "headers": {
 	       "Cookie": "__cfduid=dc01593140fb7fa1820d41055c5b31fc41590748525"
 	     },
+		 "dataType": "json"
      }
 
      $.ajax(settings).done(function (data) {
