--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,6 +1,7 @@
 <meta name="format-detection" content="telephone=no">
 
 <link rel="stylesheet" href="css/applause-button.css" />
+<script src="applause-button.js"></script>
 
 <!-- <script type="text/javascript" src="//coronabnr-53eb.kxcdn.com/coronabar.min.js" async></script>
 
