--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -527,7 +527,7 @@ applause-button {
     position: absolute;
     top: -40%;
     width: 100%;
-    color: gray;
+    color: #555555;
     user-select: none;
 
     .count {
