--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -467,6 +467,8 @@ p.kudos {
   bottom: 0;
 }
 
+applause-button .style-root { color: red !important; }
+
 applause-button {
   position: relative;
   cursor:pointer;
