--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -467,7 +467,7 @@ p.kudos {
   bottom: 0;
 }
 
-applause-button .style-root { color: red !important; }
+applause-button .style-root { color: $primary_complementary !important; }
 
 applause-button {
   position: relative;
