--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -536,6 +536,7 @@ applause-button {
     user-select: none;
 
     .count {
+  	  font-family: "Cabin Sketch";
       text-align: center;
     }
   }
