--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -536,7 +536,7 @@ applause-button {
     user-select: none;
 
     .count {
-  	  font-family: "Cabin Sketch";
+  	  font-family: "Inconsolata";
       text-align: center;
     }
   }
