page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -74,9 +74,7 @@
 		 // console.log(pathname);
 	     var settings = {
 	       "url": "https://api.applause-button.com/get-claps?url="+pathname,
-		   "method": "GET",
-		   "timeout": 0,
-		   "dataType": "json"
+		   "method": "GET"
 	     }
 
 	     $.ajax(settings).done(function (data) {
