--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -77,7 +77,7 @@
 		   "method": "GET"
 	     }
 
-	     $.ajax(settings).done(function (data) {
+	     $.ajax(settings).done(function (response) {
 	       // console.log(data);
 	   
 		   if (data.response.items[0] == null) {
