page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -71,7 +71,7 @@
   </script> -->
 	  <script>
 	     var pathname = window.location.pathname;
-		 // console.log(pathname);
+		 console.log(pathname);
 	     var settings = {
 	       "url": "https://api.applause-button.com/get-claps?url="+pathname,
 		   "method": "GET",
