--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -537,6 +537,7 @@ applause-button {
 
     .count {
   	  font-family: "Cabin Sketch";
+	  color: $primary_complementary;
       text-align: center;
     }
   }
