--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -221,6 +221,9 @@ color: $primary; }
 .article-metadata {
 color: $primary_complementary; }
 
+.article-metadata svg {
+  fill: $primary_complementary; }
+
 .article-metadata a,
 .article-metadata a:hover {
   color: $primary_complementary; }
