--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -471,9 +471,9 @@ p.kudos {
 }
 
 applause-button .style-root {
-	fill: $primary_complementary !important;
-	stroke: $primary_complementary !important;
-	color: $primary_complementary !important; }
+	fill: #111111 !important;
+	stroke: #111111 !important;
+	color: #111111 !important; }
 
 applause-button {
   position: relative;
