--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -540,7 +540,7 @@ applause-button {
 
     .count {
   	  font-family: "Cabin Sketch";
-	  color: $primary_complementary;
+	  color: #111111;
       text-align: center;
     }
   }
