--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -471,7 +471,7 @@ p.kudos {
 }
 
 applause-button .style-root {
-	fill: #111111 !important;
+	fill: $example_fg !important;
 	stroke: #111111 !important;
 	color: #111111 !important; }
 
