--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -470,10 +470,10 @@ p.kudos {
   bottom: 0;
 }
 
-//applause-button .style-root {
-//	fill: #111111 !important;
-//	stroke: #111111 !important;
-//	color: #111111 !important; }
+applause-button .style-root {
+	fill: #111111 !important;
+	stroke: #111111 !important;
+	color: #111111 !important; }
 
 applause-button {
   position: relative;
