--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -222,7 +222,12 @@ color: $primary; }
 color: $primary_complementary; }
 
 .article-metadata svg {
-  fill: $primary_complementary; }
+  fill: $primary_complementary; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
 
 .article-metadata a,
 .article-metadata a:hover {
