--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -117,7 +117,7 @@
   {{ $taxonomy := "tags" }}
   {{ if $page.Param $taxonomy }}
   <span class="middot-divider"></span>
-  <span class="article-tags">
+  <span class="article-categories">
     <i class="fas fa-tags mr-1"></i>
     {{- range $index, $value := ($page.GetTerms $taxonomy) -}}
       {{- if gt $index 0 }}, {{ end -}}
