--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -221,13 +221,10 @@ color: $primary; }
 .article-metadata {
 color: $primary_complementary; }
 
-.article-metadata .article-kudos {
-	display: flex;
-	align-items: center;
-}
-
 .article-metadata svg {
-  fill: $primary_complementary; }
+  fill: $primary_complementary; 
+	position: relative;
+	top: 5px; }
 
 .article-metadata a,
 .article-metadata a:hover {
