--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -222,9 +222,7 @@ color: $primary; }
 color: $primary_complementary; }
 
 .article-metadata svg {
-  fill: $primary_complementary; 
-	position: relative;
-	top: -5px; }
+  fill: $primary_complementary; }
 
 .article-metadata a,
 .article-metadata a:hover {
