--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -222,7 +222,8 @@ color: $primary; }
 color: $primary_complementary; }
 
 .article-metadata svg {
-  fill: $primary_complementary; }
+  fill: $primary_complementary; 
+	vertical-align: baseline; }
 
 .article-metadata a,
 .article-metadata a:hover {
