--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -223,7 +223,7 @@ color: $primary_complementary; }
 
 .article-metadata svg {
   fill: $primary_complementary; 
-	vertical-align: baseline; }
+	vertical-align: middle; }
 
 .article-metadata a,
 .article-metadata a:hover {
