--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -534,7 +534,7 @@ applause-button {
 
   .count-container {
     position: relative;
-    right: 30px;
+    left: 30px;
     width: 100%;
     color: #111111;
     user-select: none;
