--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -70,10 +70,10 @@
      });
   </script> -->
 	  <script>
-	     var pathname = window.location.pathname;
-		 // console.log(pathname);
+		 // 	     var pathname = window.location.pathname;
+		 // // console.log(pathname);
 	     var settings = {
-	       "url": "https://api.applause-button.com/get-claps?url="+pathname,
+	       "url": "https://api.applause-button.com/get-claps",
 		   "method": "GET",
 		   "timeout": 0
 	     }
