--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -431,14 +431,14 @@ select.form-control:focus::-ms-value {
     color: $example_fg;
 }
 
-/*************************************************
-*  LikeBtn
-**************************************************/
-
-.lb-style-custom .lb-like-icon {
-position: relative;
-top: -4px;
-margin-right: 8px; }
+///*************************************************
+//*  LikeBtn
+//**************************************************/
+//
+//.lb-style-custom .lb-like-icon {
+//position: relative;
+//top: -4px;
+//margin-right: 8px; }
 
 /*************************************************
 *  Kudos
