custom_head.html

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -26,6 +26,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5ed180802978280013bc9dee&product=custom-share-buttons&cms=website' async='async'></script>
+
 <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
