--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -449,6 +449,10 @@ p.kudos {
 	color: #555555; 
 	text-align: center; }	
 	
+/*************************************************
+*  Applause
+**************************************************/	
+	
 @mixin animate-once($name) {
   animation-name: $name;
   animation-duration: 0.5s;
@@ -648,3 +652,6 @@ applause-button {
   }
 }
 	
+/*************************************************
+*  Reaction buttons
+**************************************************/		
