--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -655,3 +655,7 @@ applause-button {
 /*************************************************
 *  Reaction buttons
 **************************************************/		
+
+#st-1 {
+	font-family: "Cabin Sketch";
+}
