--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -545,7 +545,8 @@ applause-button {
 
     .count {
   	  font-family: "Cabin Sketch";
-	  color: #111111;
+	  font-size: 0.8rem;
+	  color: #555555;
       text-align: center;
     }
   }
