page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -70,13 +70,15 @@
      });
   </script> -->
 	  <script>
-		 // 	     var pathname = window.location.pathname;
-		 // // console.log(pathname);
+		 var pathname = window.location.pathname;
+		 console.log(pathname);
 	     var settings = {
-	       "url": "https://api.applause-button.com/get-claps",
+	       "url": "https://api.applause-button.com/get-claps?url="+pathname,
 		   "method": "GET",
 		   "timeout": 0
 	     }
+		 
+		 console.log(settings.url);
 
 	     $.ajax(settings).done(function (response) {
 	       // console.log(response);
