page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -70,7 +70,7 @@
      });
   </script> -->
 	  <script>
-		 var url = "{{ $page.RelPermalink }}";
+		 var url = "{{ $page.Permalink }}";
 		 console.log(url);
 	     var settings = {
 	       "url": "https://api.applause-button.com/get-claps?url="+url,
