--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -71,7 +71,7 @@
   </script> -->
 	  <script>
 		 var url = "{{ $page.Permalink }}";
-		 console.log(url);
+		 // console.log(url);
 	     var settings = {
 	       "url": "https://api.applause-button.com/get-claps?url="+url,
 		   "method": "GET",
@@ -81,7 +81,7 @@
 		 console.log(settings.url);
 
 	     $.ajax(settings).done(function (response) {
-	       console.log(response);
+	       // console.log(response);
 		   
 		   var str = "#kudos"+url;
 		   console.log(str);
