page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -78,7 +78,7 @@
 		   "timeout": 0
 	     }
 		 
-		 console.log(settings.url);
+		 // console.log(settings.url);
 
 	     $.ajax(settings).done(function (response) {
 	       // console.log(response);
