page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -83,7 +83,7 @@
 	     $.ajax(settings).done(function (response) {
 	       // console.log(response);
 		   
-		   var str = "#kudos"+url;
+		   var str = "#kudos-"+url;
 		   console.log(str);
 	   
 		   $(str).append(response);
