page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -86,7 +86,7 @@
 		   var str = "#kudos-"+url;
 		   console.log(str);
 	   
-		   $(str).append(response);
+		   $(str).html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
