--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -83,10 +83,10 @@
 	     $.ajax(settings).done(function (response) {
 	       // console.log(response);
 		   
-		   var str = "#kudos"+url;
+		   var str = "kudos"+url;
 		   console.log(str);
 	   
-		   $(str).html(response);
+		   $(#str).html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
