page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -83,7 +83,7 @@
 	     $.ajax(settings).done(function (response) {
 	       // console.log(response);		   
 	   
-		   $("#kudos"+url).html(response);
+		   $("#"+"kudos"+url).html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
