page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -81,10 +81,12 @@
 		 // console.log(settings.url);
 
 	     $.ajax(settings).done(function (response) {
-	       // console.log(response);		   
+	       // console.log(response);
+		   
+		   var prueba = 3;
 	   
 		   // $("#kudos-"+url).html(response);
-		   $("#kudos").html(response);
+		   $("#kudos"+prueba).html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
