page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -96,7 +96,7 @@
 		       </g>
 		     </svg>
 			   <!-- <span id="kudos-{{ $page.Permalink }}"></span> -->
-   			   <span id="kudos"></span>
+   			   <span id="kudos3"></span>
   <!-- <i class="fas fa-heart mr-1"></i> -->
 
   {{/* Show Disqus comment count if enabled. */}}
