--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -81,9 +81,11 @@
 		 // console.log(settings.url);
 
 	     $.ajax(settings).done(function (response) {
-	       // console.log(response);s		   	
+			 // console.log(response);
+			 
+		 var contents = document.getElementById("kudos"+url);
 	   
-		   $("#kudos-" + url).html(response);
+		 contents.html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
