page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -70,11 +70,6 @@
      });
   </script> -->
 	  <script>
-		  function jq( myid ) {
- 
-		      return "#" + myid.replace( /(:|\.|\[|\]|,|=|@)/g, "\\$1" );
- 
-		  }
 		 var url = "{{ $page.Permalink }}";
 		 // console.log(url);
 	     var settings = {
@@ -87,8 +82,10 @@
 
 	     $.ajax(settings).done(function (response) {
 			 // console.log(response);
-			 		
-		 $( jq( "kudos"+url ) ).html(response);
+			 
+		 var contents = document.getElementById("kudos"+url);
+	   
+ 	     contents.html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
