page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -84,6 +84,7 @@
 			 // console.log(response);
 			 
 		 var str = "kudos-"+url;
+		 console.log(str);
 			 
 		 var contents = document.getElementById(str);
 	   
