page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -84,9 +84,9 @@
 			 // console.log(response);
 			 
 		 var str = "kudos-"+url;
-		 console.log(str);
 			 
 		 var contents = document.getElementById(str);
+		 console.log(contents),
 	   
  	     contents.html(response);
 	     });
