page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -86,7 +86,7 @@
 		 var str = "kudos-"+url;
 			 
 		 var contents = document.getElementById(str);
-		 console.log(contents),
+		 console.log(contents);
 	   
  	     contents.html(response);
 	     });
