page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -88,7 +88,7 @@
 		 var contents = document.getElementById(str);
 		 console.log(contents);
 	   
- 	     contents.html(response);
+ 	     contents.text(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
