--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -84,12 +84,7 @@
 			 // console.log(response);
 			 
 		 var str = "kudos-"+url.replace(/^https?:\/\//, "");
-			 console.log(str);
-			 
-		 var contents = document.getElementById(str);
-		 console.log(contents);
-	   
- 	     contents.text(response);
+		 $("#"+str).html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
