--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -84,6 +84,7 @@
 			 // console.log(response);
 			 
 		 var str = "kudos-"+url.replace(/^http?:\/\//, "");
+			 console.log(str);
 		 $("#"+str).html(response);
 	     });
 	  </script>		 
