--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -81,7 +81,7 @@
 		 // console.log(settings.url);
 
 	     $.ajax(settings).done(function (response) {
-			 // console.log(response);			 
+			 console.log(response);			 
 			 $("#kudos-"+url).html(response);
 	     });
 	  </script>		 
