page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -82,9 +82,9 @@
 
 	     $.ajax(settings).done(function (response) {
 			 console.log(response);
-			 var kudos = "#kudos"+"{{ $page.LinkTitle }}";
+			 var kudos = "#kudos-"+"{{ $page.LinkTitle }}";
 			 console.log(kudos);
-			 $("#kudos-"+url).html(response);
+			 $("#kudos-"+"{{ $page.LinkTitle }}").html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
