page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -84,7 +84,7 @@
 			 console.log(response);
 			 var kudos = "#kudos-"+url.replace(/[^a-z0-9-_]+/gi, "");
 			 console.log(kudos);
-			 $("#kudos-"+"{{ $page.LinkTitle }}").html(response);
+			 $(#kudos).html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
