page_metadata.html

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -83,8 +83,17 @@
 	     $.ajax(settings).done(function (response) {
 			 console.log(response);
 			 var kudos = "#kudos-"+url.replace(/[^a-z0-9-_]+/gi, "");
+			 
+			 //Find all IDs starting with kudos
+			 $("[id^='kudos']").filter(function() {
+			     //Set data from the ID (URL)
+			     $(this).data("ele-path", this.id);
+			     //Change the id removing all spl chars.
+			     this.id = this.id.replace(/[^a-z0-9-_]+/gi, "");
+			 });
+			 
 			 console.log(kudos);
-			 $(#kudos).html(response);
+			 $(kudos).html(response);
 	     });
 	  </script>		 
 		 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 60 60">
